--- a/.env
+++ b/.env
@@ -2,5 +2,4 @@ DATABASE_URL="postgres://sais:sais@localhost:5435/sais"
 MAPSHARE_ID="Garmin"
 REPORT_SENDER="y640143@nwytg.net"
 REPORT_MMSI="12345678"
-SENDGRID_USERNAME=""
-SENDGRID_PASSWORD=""
+SENDGRID_API_KEY="""
